[gd_scene load_steps=23 format=3 uid="uid://clihxgfs2vmh6"]

[ext_resource type="Script" path="res://scripts/entities_obstacles_and_objects/plant.gd" id="1_8fmwg"]
[ext_resource type="Texture2D" uid="uid://dn7dafxyfthwo" path="res://assets/textures/objects/plant/plant attack.png" id="1_jovu2"]
[ext_resource type="Script" path="res://scripts/character_components/attack_body_component.gd" id="2_ofssj"]
[ext_resource type="Texture2D" uid="uid://cer6mtpoqhxbp" path="res://assets/textures/objects/plant/plant move.png" id="2_p87hk"]
[ext_resource type="Script" path="res://scripts/character_components/attack_component.gd" id="5_lft7e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06pbc"]
size = Vector2(92.5, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2dvt"]
atlas = ExtResource("1_jovu2")
region = Rect2(0, 0, 125, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0gr4"]
atlas = ExtResource("1_jovu2")
region = Rect2(125, 0, 125, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_2phox"]
atlas = ExtResource("1_jovu2")
region = Rect2(250, 0, 125, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvejq"]
atlas = ExtResource("1_jovu2")
region = Rect2(375, 0, 125, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5qw3"]
atlas = ExtResource("1_jovu2")
region = Rect2(500, 0, 125, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h0sl"]
atlas = ExtResource("1_jovu2")
region = Rect2(625, 0, 125, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xo77"]
atlas = ExtResource("2_p87hk")
region = Rect2(0, 0, 129, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_865qf"]
atlas = ExtResource("2_p87hk")
region = Rect2(129, 0, 129, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vxic"]
atlas = ExtResource("2_p87hk")
region = Rect2(258, 0, 129, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vge7"]
atlas = ExtResource("2_p87hk")
region = Rect2(387, 0, 129, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_22khb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2dvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0gr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2phox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvejq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5qw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h0sl")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xo77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_865qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vxic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vge7")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3a877"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(92.5, 31)]
}

[sub_resource type="Animation" id="Animation_herg3"]
resource_name = "attack"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-19.25, -1), Vector2(-19.25, -1), Vector2(-29.25, -8.75), Vector2(-18.75, 0.25), Vector2(-3, 8.375), Vector2(-8.875, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(92.5, 31), Vector2(92.5, 31), Vector2(72.5, 46.5), Vector2(93.5, 28.5), Vector2(125.5, 41.25), Vector2(113.75, 34)]
}

[sub_resource type="Animation" id="Animation_ygwuc"]
resource_name = "move"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3.625, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(117.25, 31)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwh2l"]
_data = {
"RESET": SubResource("Animation_3a877"),
"attack": SubResource("Animation_herg3"),
"move": SubResource("Animation_ygwuc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ym8j6"]
size = Vector2(68.5, 47)

[node name="Plant" type="Node2D"]
script = ExtResource("1_8fmwg")

[node name="Area2D" type="Area2D" parent="." node_paths=PackedStringArray("attackBodyShape")]
collision_layer = 5
collision_mask = 2
script = ExtResource("2_ofssj")
attackBodyShape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, 8)
shape = SubResource("RectangleShape2D_06pbc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_22khb")
animation = &"attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D/AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_vwh2l")
}

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(62, -1)
shape = SubResource("RectangleShape2D_ym8j6")

[node name="Components" type="Node2D" parent="."]

[node name="Attack" type="Node2D" parent="Components"]
script = ExtResource("5_lft7e")

[connection signal="animation_finished" from="Area2D/AnimatedSprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="Components/Attack" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="Components/Attack" method="_on_detection_area_body_exited"]
